Changing java folder structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="activity.CreateAccountActivity"
+        <activity android:name=".activity.CreateAccountActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name="activity.DetalheActivity" />
-        <activity android:name="activity.PlannerMainActivity" />
-        <activity android:name="activity.AboutActivity" />
-        <activity android:name="activity.LoginActivity" />
-        <activity android:name="activity.AddEditParametersActivity" />
-        <activity android:name="activity.SplashActivity">
+        <activity android:name=".activity.DetalheActivity" />
+        <activity android:name=".activity.PlannerMainActivity" />
+        <activity android:name=".activity.AboutActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.AddEditParametersActivity" />
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
