--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ android {
 
 dependencies {
 
-    //standart implementations
+    /**
+     * standard implementations
+     */
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
