--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,12 @@ dependencies {
      */
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    /**
+     * Calendar
+     */
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
