--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,11 @@ dependencies {
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    /**
+     * Pick the Date
+     */
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
