--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name=".activity.NavMainActivity"
             android:label="@string/title_activity_nav_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.UserProfileActivity" />
+        <activity android:name=".activity.UserProfileActivity"
+            android:parentActivityName=".activity.NavMainActivity"/>
         <activity
             android:name=".activity.CreateAccountActivity"
             android:screenOrientation="portrait" />
