FloatActionButton main screen Remove AddEditParametersActivity and children associated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,10 @@ dependencies {
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    /**
+     * N fabs
+     */
+    implementation 'com.github.clans:fab:1.6.4'
+
 }
 apply plugin: 'com.google.gms.google-services'
