Email module with dependencies. Adapter Classes Calendar with OnLongClickListenter to Recycler View.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,12 @@ dependencies {
      */
     implementation 'com.github.clans:fab:1.6.4'
 
+    /**
+     * Uses Javax Mail
+     */
+    compile files('libs/activation.jar')
+    compile files('libs/additionnal.jar')
+    compile files('libs/mail.jar')
+
 }
 apply plugin: 'com.google.gms.google-services'
