--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,9 +92,9 @@ dependencies {
     /**
      * Uses Javax Mail
      */
-    compile files('libs/activation.jar')
-    compile files('libs/additionnal.jar')
-    compile files('libs/mail.jar')
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/mail.jar')
 
 }
 apply plugin: 'com.google.gms.google-services'
