--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.projeto.academicplanner">
 
-
     <dist:module dist:instant="true" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.SendEmailActivity"
+            android:parentActivityName=".activity.NavMainActivity"/>
         <activity
             android:name=".activity.ClassDetailActivity"
             android:parentActivityName=".activity.NavMainActivity" />
