--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SendEmailActivity"
-            android:parentActivityName=".activity.NavMainActivity"/>
+        <activity
+            android:name=".activity.PreferencesActivity"
+            android:parentActivityName=".activity.NavMainActivity" />
+        <activity
+            android:name=".activity.SendEmailActivity"
+            android:parentActivityName=".activity.NavMainActivity" />
         <activity
             android:name=".activity.ClassDetailActivity"
             android:parentActivityName=".activity.NavMainActivity" />
