--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SpecialClassActivity"></activity>
+        <activity android:name=".activity.SpecialClassActivity"
+            android:parentActivityName=".activity.NavMainActivity"/>
         <activity
             android:name=".activity.PreferencesActivity"
             android:parentActivityName=".activity.NavMainActivity" />
