Tirando layout, depois volta. Colocando activity ClassAdd pra funcionar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".activity.SettingsMainActivity"
             android:parentActivityName=".activity.NavMainActivity" />
         <activity
-            android:name=".activity.ClassMainActivity"
+            android:name=".activity.ClassAddActivity"
             android:parentActivityName=".activity.NavMainActivity" />
         <activity
             android:name=".activity.NavMainActivity"
