--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ClassUpdateActivity"></activity>
+        <activity android:name=".activity.NavigationActivity"
+            android:parentActivityName=".activity.NavMainActivity"></activity>
+        <activity android:name=".activity.ClassUpdateActivity"
+            android:parentActivityName=".activity.NavMainActivity"
+            />
         <activity
             android:name=".activity.SpecialClassActivity"
             android:parentActivityName=".activity.NavMainActivity" />
