--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,11 @@ dependencies {
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
 
+    /**
+    * Glide Lib
+    */
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
