--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SpecialEventActivity"></activity>
-        <activity android:name=".activity.SpecialClassUpdateActivity" />
+        <activity android:name=".activity.SpecialEventActivity"
+            android:parentActivityName=".activity.NavMainActivity"></activity>
+        <activity android:name=".activity.SpecialClassUpdateActivity"
+            android:parentActivityName=".activity.NavMainActivity"/>
         <activity
             android:name=".activity.NavigationActivity"
             android:parentActivityName=".activity.NavMainActivity" />
